# Rifty

./: .env.example  .gitignore  App.tsx  CHANGELOG.md  DEPLOYMENT_COMMANDS.md  EDGE_FUNCTIONS_DEPLOYMENT.md  FEATURE_DIFFERENTIATION.md  MIGRATION_SUMMARY.md  MVP_IMPLEMENTATION_SUMMARY.md  MVP_INTEGRATION_GUIDE.md  OPERATING_PICTURE_CACHING.md  README.md  SUPABASE_DATABASE_CALLS.md  SUPABASE_SECRETS_GUIDE.md  app.config.ts  app.json  deploy-edge-functions.sh  eslint.config.js  example.env  import_map.json  metro.config.js  package-lock.json  package.json  prompt.md  refresh_mv.sql  supabase.sql  supabase.txt  supabase_current_schema.sql  temp_coaching.ts  temp_no_export.ts  test_edge_function.js  tsconfig.json  vitest.config.mts  vitest.config.ts
docs/: howtoStart.md  (+4 more)
services/python-ai/: README.md  pyproject.toml  requirements.txt
services/python-ai/app/: main.py
services/python-ai/app/adjacent/: __init__.py  intent_service.py  memory_service.py  persona.py  personalization_service.py  schedules.py
services/python-ai/app/agent/: __init__.py  actions.py  cache.py  context_window.py  embeddings.py  goal_context.py  intent_definitions.py  intent_routing.py  memory.py  outbox.py  pipeline.py  planner.py  redactor.py  riflett_intent_classifier.py  slot_filler.py  telemetry.py  types.py  user_config.py
services/python-ai/app/ai_legacy/: __init__.py  gate.py  pipeline.py  router.py
services/python-ai/tests/: test_adjacent_endpoints.py  test_agent_pipeline.py  test_ai_legacy_gate.py  test_ai_legacy_router.py  test_ai_legacy_validation.py  test_orchestrator_endpoints.py
(+421 files in other folders)
